--- a/angular.json
+++ b/angular.json
@@ -21,7 +21,7 @@
             "aot": false,
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets/fonts"
             ],
             "styles": [
               "src/styles.css"
@@ -115,6 +115,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "home-automation"
 }
