--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
     "@types/socket.io-client": "^1.4.32",
-    "socket.io-client": "^2.1.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
+    "ngx-webstorage-service": "^4.1.0",
     "rxjs": "~6.4.0",
+    "socket.io-client": "^2.1.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
